////
Copyright 2019, 2021 Peter Dimov
Distributed under the Boost Software License, Version 1.0.
http://www.boost.org/LICENSE_1_0.txt
////

[#changes]
# Revision History
:toc:
:toc-title:
:idprefix:

## Changes in 1.79.0

* `source_location().file_name()` and `source_location().function_name()`
  now return `""` instead of `"(unknown)"`.

## Changes in 1.78.0

* Added `source_location::to_string`.

## Changes in 1.73.0

* Added `source_location`.